--- a/cerveza.html
+++ b/cerveza.html
@@ -7,65 +7,150 @@
     <link rel="stylesheet" href="cerveza.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1><i class="fas fa-beer"></i> Inventario de Cervezas</h1>
-        </header>
-        
-        
-        <div class="app-container">
-           <aside class="sidebar">
-    <nav>
-        <ul>
-            <li>
-                <a href="agregar cerveza.html" class="btn btn-secondary">
-                    <i class="fas fa-plus"></i> Agregar cerveza
-                </a>
-            </li>
-            <li>
-                <a href="eliminar.html" class="btn btn-secondary">
-                    <i class="fas fa-trash"></i> Eliminar cerveza
-                </a>
-            </li>
-            <li>
-                <a href="Buscar.html" class="btn btn-secondary">
-                    <i class="fas fa-search"></i> Buscar cerveza
-                </a>
-            </li>
-            <li>
-                <a href="Inventario.html" class="btn btn-secondary">
-                    <i class="fas fa-list"></i> Listar inventario
-                </a>
-            </li>
-             <li>
-                <a href="Inventario.html" class="btn btn-secondary">
-                    <i class="fas fa-list"></i> Agregar licores
-                </a>
-            </li>
-             <li>
-                <a href="Inventario.html" class="btn btn-secondary">
-                    <i class="fas fa-list"></i> Buscar licores
-                </a>
-            </li>
-             <li>
-                <a href="Inventario.html" class="btn btn-secondary">
-                    <i class="fas fa-list"></i> Eliminar licores
-                </a>
-            </li>
-             <li>
-                <a href="Inventario.html" class="btn btn-secondary">
-                    <i class="fas fa-list"></i> Lista licores
-                </a>
-            </li>
-        </ul>
-    </nav>
-</aside>
-      <div class="header-image">
-                <img src="c:\Users\Asus Vivobook\Downloads\Imagen de WhatsApp 2025-05-26 a las 11.52.23_91eadd95.jpg" alt="Imagen de cervezas" class="responsive-image">
-            </div>
-      <div class="header-image">
-                <img src="c:\Users\Asus Vivobook\Downloads\Imagen de WhatsApp 2025-05-26 a las 11.54.06_bb6ea77f.jpg" alt="Imagen de cervezas" class="responsive-image">
-            </div>        
+<div class="container">
+    <header>
+        <h1><i class="fas fa-beer"></i> Inventario de Cervezas</h1>
+    </header>
 
-</body>
+    <div class="app-container">
+        <aside class="sidebar">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="agregar cerveza.html" class="btn btn-secondary">
+                            <i class="fas fa-plus"></i> Agregar cerveza
+                        </a>
+                    </li>
+                    <li>
+                        <a href="eliminar.html" class="btn btn-secondary">
+                            <i class="fas fa-trash"></i> Eliminar cerveza
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Buscar.html" class="btn btn-secondary">
+                            <i class="fas fa-search"></i> Buscar cerveza
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Inventario.html" class="btn btn-secondary">
+                            <i class="fas fa-list"></i> Listar inventario
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Inventario.html" class="btn btn-secondary">
+                            <i class="fas fa-list"></i> Agregar licores
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Inventario.html" class="btn btn-secondary">
+                            <i class="fas fa-list"></i> Buscar licores
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Inventario.html" class="btn btn-secondary">
+                            <i class="fas fa-list"></i> Eliminar licores
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Inventario.html" class="btn btn-secondary">
+                            <i class="fas fa-list"></i> Lista licores
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+
+        <div class="content">
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Aguila2.jpg" alt="Cerveza Águila" style="margin-left: 1cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Andina2.jpg" alt="Cerveza Andina" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Budweiser2.jpg" alt="Cerveza Budweiser" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Club2.jpg" alt="Cerveza Club Colombia" style="margin-left: 2cm;" >
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Corona2.jpg" alt="Cerveza Corona" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Costeña2.jpg" alt="Cerveza Costeña" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Heiniken2.jpg" alt="Cerveza Heiniken" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Poker2.jpg" alt="Cerveza Poker" style="margin-left: 1cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/Redd´s.jpg" alt="Cerveza Redd´s" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="Vender.html" class="btn btn-secondary">
+                    <img src="./img/pilsen.jpg" alt="Cerveza Pilsen" style="margin-left: 2.6cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Aguardiente.png" alt="Licor Aguardiente" style="margin-left: 2.4cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Chirrinchi.jpg" alt="Licor Chirrinchi" style="margin-left: 1.5cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Crema.PNG" alt="Licor Crema" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Ron.PNG" alt="Licor Ron" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Tequila.JPG" alt="Licor Tequila" style="margin-left: 1cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Vino.jpg" alt="Licor Vino" style="margin-left: 2cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Vodka.PNG" alt="Licor Vodka" style="margin-left: 2.8cm;">
+                </a>
+            </button>
+            <button type="button">
+                <a href="VenderLicor.html" class="btn btn-secondary">
+                    <img src="./img/Whisky.PNG" alt="Licor Whisky" style="margin-left: 2.8cm;">
+                </a>
+            </button>
+        </div>
+    </div> </div> </body>
 </html>
