--- a/agregar cerveza.html
+++ b/agregar cerveza.html
@@ -37,7 +37,7 @@
                                 <input type="text" id="nombre" required>
                             </div>
                             <div class="form-group">
-                                <label for="marca">Marca:</label>
+                                <label for="marca">Unidad de venta:</label>
                                 <input type="text" id="marca" required>
                             </div>
                             <div class="form-group">
