--- a/Buscar licor.html
+++ b/Buscar licor.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscar Cerveza - Inventario</title>
-    <link rel="stylesheet" href="Buscar cerveza.css">
-    <script src="Buscar.js"></script>
+    <title>Buscar Licor - Inventario</title>
+    <link rel="stylesheet" href="Buscar licor.css">
+    <script src="Buscar licor.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-beer"></i> Buscar Cerveza en el Inventario</h1>
+            <h1><i class="fas fa-wine-bottle"></i> Buscar Licor en el Inventario</h1>
         </header>
         <div class="app-container">
             <aside class="sidebar">
                 <nav>
                     <ul>
                         <li>
-                            <ul>
-               <ul class="dropdown-menu">
-    <li>
-        <a href="cerveza.html" class="btn btn-secondary">
-            <i class="fas fa-list"></i> Volver al inicio
-        </a>
-    </li>
-</ul>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="cerveza.html" class="btn-inicio">
+                                        <i class="fas fa-list"></i> Volver al inicio
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
@@ -32,11 +31,11 @@
             <main class="content">
                 <section id="buscar" class="section active">
                     <div class="buscar-container">
-                        <h2><i class="fas fa-search"></i> Buscar Cerveza</h2>
-                        <form id="form-buscar">
+                        <h2><i class="fas fa-search"></i> Buscar Licor</h2>
+                        <form id="form-buscar-licor">
                             <div class="form-group">
-                                <label for="nombre-buscar">Nombre de la cerveza:</label>
-                                <input type="text" id="nombre-buscar" required>
+                                <label for="nombre-buscar-licor">Nombre del licor:</label>
+                                <input type="text" id="nombre-buscar-licor" required>
                             </div>
                             <div class="form-actions">
                                 <button type="submit" class="btn btn-primary">
@@ -47,7 +46,7 @@
                                 </button>
                             </div>
                         </form>
-                        <div id="resultado-busqueda" class="resultado"></div>
+                        <div id="resultado-busqueda-licor" class="resultado"></div>
                     </div>
                 </section>
             </main>
