--- a/Inventario.html
+++ b/Inventario.html
@@ -15,13 +15,13 @@
         <div class="app-container">
             <aside class="sidebar">
                 <nav>
-                    <ul>
-                        <li>
-                            <a href="cerveza.html" class="btn btn-secondary">
-                                <i class="fas fa-list"></i> Volver al inicio
-                            </a>
-                        </li>
-                    </ul>
+                               <ul class="dropdown-menu">
+    <li>
+        <a href="cerveza.html" class="btn-inicio">
+            <i class="fas fa-list"></i> Volver al inicio
+        </a>
+    </li>
+</ul>
                 </nav>
             </aside>
             <main class="content">
