--- a/cerveza.html
+++ b/cerveza.html
@@ -15,47 +15,47 @@
     <div class="app-container">
         <aside class="sidebar">
             <nav>
-                <ul>
+            <ul class="dropdown-menu">
                     <li>
-                        <a href="agregar cerveza.html" class="btn btn-secondary">
-                            <i class="fas fa-plus"></i> Agregar cerveza
+                        <a href="agregar cerveza.html" class="btn-inicio">
+                            <i class="fas fa-list"></i> Agregar cerveza
                         </a>
-                    </li>
+                   </li>
                     <li>
-                        <a href="eliminar.html" class="btn btn-secondary">
+                        <a href="eliminar cerveza.html" class="btn-inicio">
                             <i class="fas fa-trash"></i> Eliminar cerveza
                         </a>
                     </li>
                     <li>
-                        <a href="Buscar.html" class="btn btn-secondary">
+                        <a href="Buscar cerveza.html" class="btn-inicio">
                             <i class="fas fa-search"></i> Buscar cerveza
                         </a>
                     </li>
                     <li>
-                        <a href="Inventario.html" class="btn btn-secondary">
-                            <i class="fas fa-list"></i> Listar inventario
+                        <a href="Inventario.html" class="btn-inicio">
+                            <i class="fas fa-list"></i> Listar cervezas
                         </a>
                     </li>
                     <li>
-                        <a href="Inventario.html" class="btn btn-secondary">
+                        <a href="agregar licor.html" class="btn-inicio">
                             <i class="fas fa-list"></i> Agregar licores
                         </a>
                     </li>
                     <li>
-                        <a href="Inventario.html" class="btn btn-secondary">
+                        <a href="Buscar licor.html" class="btn-inicio">
                             <i class="fas fa-list"></i> Buscar licores
                         </a>
                     </li>
                     <li>
-                        <a href="Inventario.html" class="btn btn-secondary">
+                        <a href="eliminar licor.html" class="btn-inicio">
                             <i class="fas fa-list"></i> Eliminar licores
                         </a>
                     </li>
                     <li>
-                        <a href="Inventario.html" class="btn btn-secondary">
-                            <i class="fas fa-list"></i> Lista licores
+                        <a href="Inventario licor.html" class="btn-inicio">
+                            <i class="fas fa-list"></i> Listar licores
+
                         </a>
-                    </li>
                 </ul>
             </nav>
         </aside>
