--- a/eliminar cerveza.html
+++ b/eliminar cerveza.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliminar Cerveza - Inventario</title>
-    <link rel="stylesheet" href="eliminar.css">
+    <link rel="stylesheet" href="eliminar cerveza.css">
     <script src="eliminar ceverza.js"></script>
 </head>
 <body>
@@ -16,12 +16,13 @@
         <div class="app-container">
             <aside class="sidebar">
                 <nav>
-                    <ul>
-                       <ul class="dropdown-menu">
-                       <a href="cerveza.html">
-                       <button>Volver al inicio</button>
-              </a>
-                    </ul>
+                     <ul class="dropdown-menu">
+    <li>
+        <a href="cerveza.html" class="btn-inicio">
+            <i class="fas fa-list"></i> Volver al inicio
+        </a>
+    </li>
+</ul>
                 </nav>
             </aside>
             
