--- a/agregar licor.html
+++ b/agregar licor.html
@@ -3,26 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar Cerveza - Inventario</title>
-    <link rel="stylesheet" href="agregar cerveza.css">
-     <script src="agregar cerveza.js"></script>
+    <title>Agregar Licor - Inventario</title>
+    <link rel="stylesheet" href="agregar licor.css">
+    <script src="agregar licor.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-beer"></i> Agregar Cerveza al Inventario</h1>
+            <h1><i class="fas fa-wine-bottle"></i> Agregar Licor al Inventario</h1>
         </header>
         <div class="app-container">
             <aside class="sidebar">
                 <nav>
                     <ul>
                         <li>
-                         <li>
-        <a href="cerveza.html" class="btn-inicio">
-            <i class="fas fa-list"></i> Volver al inicio
-        </a>
-              </a>
-                    </ul>
+                            <a href="cerveza.html" class="btn-inicio">
+                                <i class="fas fa-list"></i> Volver al inicio
+                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -30,34 +27,34 @@
             <main class="content">
                 <section id="agregar" class="section active">
                     <div class="agregar-container">
-                        <h2><i class="fas fa-plus-circle"></i> Agregar Nueva Cerveza</h2>
-                        <form id="form-agregar">
+                        <h2><i class="fas fa-plus-circle"></i> Agregar Nuevo Licor</h2>
+                        <form id="form-agregar-licor">
                             <div class="form-group">
-                                <label for="nombre">Nombre:</label>
-                                <input type="text" id="nombre" required>
+                                <label for="nombre-licor">Nombre:</label>
+                                <input type="text" id="nombre-licor" required>
                             </div>
                             <div class="form-group">
-                                <label for="marca">Distribuidora:</label>
-                                <input type="text" id="marca" required>
+                                <label for="marca-licor">Unidad de venta:</label>
+                                <input type="text" id="marca-licor" required>
                             </div>
                             <div class="form-group">
-                                <label for="tipo">Precentacion:</label>
-                                <input type="text" id="tipo" required>
+                                <label for="tipo-licor">Presentación:</label>
+                                <input type="text" id="tipo-licor" required>
                             </div>
                             <div class="form-group">
-                                <label for="cantidad">Cantidad:</label>
-                                <input type="text" id="cantidad"  required>
+                                <label for="cantidad-licor">Cantidad:</label>
+                                <input type="text" id="cantidad-licor" required>
                             </div>
                             <div class="form-actions">
                                 <button type="submit" class="btn btn-primary">
-                                    <i class="fas fa-plus"></i> Agregar Cerveza
+                                    <i class="fas fa-plus"></i> Agregar Licor
                                 </button>
                                 <button type="reset" class="btn btn-secondary">
                                     <i class="fas fa-times"></i> Limpiar
                                 </button>
                             </div>
                         </form>
-                        <div id="resultado-agregar" class="resultado"></div>
+                        <div id="resultado-agregar-licor" class="resultado"></div>
                     </div>
                 </section>
             </main>
@@ -65,4 +62,3 @@
     </div>
 </body>
 </html>
-                
